--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.0.10/css/all.css"
     />
-    <link rel="stylesheet" href="/dist/output.css">
+    <link rel="stylesheet" href="/dist/output.css" />
   </head>
-  <body class="bg-[#ADD8E6]">
+  <body class="bg-primary">
     <div class="mx-auto container">
       <div class="flex flex-col mt-14">
-        <h2 class="text-center text-2xl font-bold mb-5 text-[#333333]">
+        <h2 class="text-center text-2xl font-bold mb-5 text-secondary">
           Manage blogs
         </h2>
         <div class="py-2 align-middle inline-block min-w-full">
@@ -40,30 +40,22 @@
                   <th scope="col">Actions</th>
                 </tr>
               </thead>
-              <tbody class="bg-white divide-y divide-gray-200">
-              </tbody>
+              <tbody class="bg-white divide-y divide-gray-200"></tbody>
             </table>
           </div>
         </div>
         <div class="px-4 py-3 flex items-center justify-between sm:px-6">
           <div class="flex-1 flex items-center justify-between">
             <div id="total-record"></div>
-            <div>
-              <nav
-                class="relative z-0 inline-flex rounded-md shadow-sm -space-x-px"
-                aria-label="Pagination"
-              >
-                <button
-                  id="btn-prev-page"
-                >
-                  <i class="fas fa-arrow-left"></i>
-                </button>
-                <button
-                  id="btn-next-page"
-                >
-                  <i class="fas fa-arrow-right"></i>
-                </button>
-              </nav>
+            <div
+              class="relative z-0 inline-flex rounded-md shadow-sm -space-x-px"
+            >
+              <button id="btn-prev-page">
+                <i class="fas fa-arrow-left"></i>
+              </button>
+              <button id="btn-next-page">
+                <i class="fas fa-arrow-right"></i>
+              </button>
             </div>
           </div>
         </div>
@@ -86,27 +78,15 @@
               <h3 class="text-xl text-center">Create</h3>
               <div>
                 <label for="blog_title">Title</label>
-                <input
-                  type="text"
-                  name="blog_title"
-                  id="blog_title"
-                />
+                <input type="text" name="blog_title" id="blog_title" />
               </div>
               <div>
                 <label for="blog_content">Content</label>
-                <input
-                  type="text"
-                  name="blog_content"
-                  id="blog_content"
-                />
+                <input type="text" name="blog_content" id="blog_content" />
               </div>
               <div>
                 <label for="blog_image">Image Link</label>
-                <input
-                  type="text"
-                  name="blog_image"
-                  id="blog_image"
-                />
+                <input type="text" name="blog_image" id="blog_image" />
               </div>
             </div>
             <div
@@ -115,14 +95,14 @@
               <button
                 type="button"
                 id="btn-save"
-                class="inline-flex w-full justify-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-blue-500 sm:ml-3 sm:w-auto"
+                class="bg-blue-600 text-white hover:bg-blue-500 sm:ml-3 sm:w-auto"
               >
                 Save
               </button>
               <button
                 type="button"
                 id="btn-cancel"
-                class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto"
+                class="mt-3 bg-white text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto"
               >
                 Cancel
               </button>
@@ -131,7 +111,6 @@
         </div>
       </div>
     </div>
-
     <script defer src="./index.js"></script>
   </body>
 </html>
