--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.0.10/css/all.css"
     />
-    <link rel="stylesheet" href="/dist/output.css" />
+    <link rel="stylesheet" href="./dist/output.css" />
   </head>
   <body class="bg-primary">
     <div class="mx-auto container">
