--- a/index.html
+++ b/index.html
@@ -121,6 +121,6 @@
         </div>
       </div>
     </div>
-    <script defer src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
