--- a/index.html
+++ b/index.html
@@ -44,30 +44,31 @@
             </table>
           </div>
         </div>
-        <div class="pagination">
+        <div class="pagination flex gap-2.5">
           <button data-type="first" class="rounded-l-md btn-pagi">
             <i class="fas fa-angle-double-left"></i>
           </button>
           <button data-type="prev" class="btn-pagi">
             <i class="fas fa-caret-left"></i>
           </button>
-          <div id="current-page" class="px-4 py-2 bg-gray-200 font-semibold">1</div>
+          <div id="current-page" class="px-4 py-2 bg-tertiary font-semibold rounded text-white">
+            1
+          </div>
           <button data-type="next" class="btn-pagi">
             <i class="fas fa-caret-right"></i>
           </button>
           <button data-type="last" class="rounded-r-md btn-pagi">
             <i class="fas fa-angle-double-right"></i>
           </button>
-          <div class="ml-4">
-            <select
-              class="bg-white text-gray-700 outline-none rounded"
-              id="select-per-page"
-            >
-              <option value="5">5 per page</option>
-              <option value="10">10 per page</option>
-              <option value="20">20 per page</option>
-            </select>
-          </div>
+          <select
+            class="bg-white text-gray-700 outline-none rounded"
+            id="select-per-page"
+          >
+            <option value="5">5</option>
+            <option value="10">10</option>
+            <option value="20">20</option>
+          </select>
+          <p>items/page</p>
         </div>
       </div>
     </div>
